--- a/src/content/docs/workflows/reference/pricing.mdx
+++ b/src/content/docs/workflows/reference/pricing.mdx
@@ -10,12 +10,11 @@ import { Render } from "~/components"
 
 # Pricing
 
-{{<Aside type="note">}}
+:::note
 
 Workflows is included in both free and paid [Workers plans](/workers/platform/pricing/#workers).
 
-{{</Aside>}}
-
+:::
 
 ## Frequently Asked Questions
 
