--- a/src/content/docs/workflows/get-started.mdx
+++ b/src/content/docs/workflows/get-started.mdx
@@ -47,10 +47,7 @@ This will download the template, with two key files: `src/index.ts` (where your 
 
 Open the `src/index.ts` file in your text editor. This file contains the following code, which is the most basic instance of a Workflow definition.
 
-```ts
----
-filename: src/index.ts
----
+```ts title="src/index.ts"
 // Import the Workflow definition
 import { Workflow } from "cloudflare:workflows"
 
@@ -94,7 +91,6 @@ export class MyFirstWorkflow extends Workflows {
         })
     }
 }
-
 ```
 
 Each call to `step.do` accepts three arguments:
@@ -127,9 +123,6 @@ The term "Durable Execution" is widely used to describe this programming model.
 TODO - explain this
 
 ```toml title="wrangler.toml"
----
-filename: wrangler.toml
----
 name = "my-first-workflow"
 main = "src/index.ts"
 compatibility_date = "2024-08-20"
@@ -151,8 +144,7 @@ TODO - explain each field and why they exist, what the naming conventions are, e
 Return to the `src/index.ts` file we created in the previous step, and add two calls to `step.do` (or replace the contents of the file with the code below):
 
 ```ts title="src/index.ts"
-
-import { Workflow } from "cloudflare:workflows"
+import { Workflow, WorkflowStep } from "cloudflare:workflows"
 
 export class MyFirstWorkflow extends Workflows {
     async run(event: WorkflowEvents, step: WorkflowStep) {
@@ -186,13 +178,19 @@ TODO - talk about StepConfig briefly? How retries work?
 Deploying a Workflow is identical to deploying a Worker.
 
 ```sh
-$ npx wrangler deploy
+npx wrangler deploy
+```
+```sh output
+TODO
 ```
 
 A Worker with a valid Workflow definition will be automatically registered by Workflows. You can list your current Workflows using wrangler:
 
 ```sh
-$ npx wrangler workflows list
+npx wrangler workflows list
+```
+```sh output
+TODO
 ```
 
 TODO - describe the output, Workflows, instances, etc.
@@ -222,7 +220,9 @@ A Workflow can be triggered by any of:
 To trigger our Workflow, we will use the `wrangler` CLI and pass in an optional `--payload`. The `payload` will be passed to your Workflow's `run` method handler as an `Event`
 
 ```sh
-$ npx wrangler workflows trigger <your-workflow> --payload='{}'
+npx wrangler workflows trigger <your-workflow> --payload='{}'
+```
+```sh output
 # Example output
 # Running Workflow ...
 # Workflow instance created! 
