--- a/src/content/docs/workers/configuration/versions-and-deployments/gradual-deployments.mdx
+++ b/src/content/docs/workers/configuration/versions-and-deployments/gradual-deployments.mdx
@@ -3,9 +3,6 @@ pcx_content_type: configuration
 title: Gradual deployments
 head: []
 description: Incrementally deploy code changes to your Workers with gradual deployments.
-sidebar:
-  badge:
-    text: Beta
 ---
 
 import { Example } from "~/components";
@@ -60,7 +57,7 @@ Answer `yes` or `no` to using TypeScript. Answer `yes` to deploying your applica
 To create a new version of the Worker, edit the Worker code by changing the `Response` content to your desired text and upload the Worker by using the [`wrangler versions upload`](/workers/wrangler/commands/#upload) command.
 
 ```sh
-npx wrangler versions upload --experimental-versions
+npx wrangler versions upload
 ```
 
 This will create a new version of the Worker that is not automatically deployed.
@@ -71,7 +68,7 @@ Use the [`wrangler versions deploy`](/workers/wrangler/commands/#deploy-2) comma
 create a new deployment that splits traffic between two versions of the Worker. Follow the interactive prompts to create a deployment with the versions uploaded in [step #1](/workers/configuration/versions-and-deployments/gradual-deployments/#1-create-and-deploy-a-new-worker) and [step #2](/workers/configuration/versions-and-deployments/gradual-deployments/#2-create-a-new-version-of-the-worker). Select your desired percentages for each version.
 
 ```sh
-npx wrangler versions deploy --experimental-versions
+npx wrangler versions deploy
 ```
 
 #### 4. Test the split deployment
@@ -94,7 +91,7 @@ You can test also target a specific version using [version overrides](#version-o
 Run `wrangler versions deploy` again and follow the interactive prompts. Select the version uploaded in [step 2](/workers/configuration/versions-and-deployments/gradual-deployments/#2-create-a-new-version-of-the-worker) and set it to 100% deployment.
 
 ```sh
-npx wrangler versions deploy --experimental-versions
+npx wrangler versions deploy
 ```
 
 ### Via the Cloudflare dashboard
@@ -168,7 +165,7 @@ curl -s https://$SCRIPT_NAME.$SUBDOMAIN.workers.dev -H 'Cloudflare-Workers-Versi
 
 The dictionary can contain multiple key-value pairs. Each key indicates the name of the Worker the override should be applied to. The value indicates the version ID that should be used and must be a [String](https://www.rfc-editor.org/rfc/rfc8941#name-strings).
 
-A version override will only be applied if the specified version is in the current deployment. The versions in the current deployment can be found using the [`wrangler deployments list --experimental-versions`](/workers/wrangler/commands/#list---experimental-versions) command or on the [Workers Dashboard](https://dash.cloudflare.com/?to=/:account/workers) under Worker > Deployments > Active Deployment.
+A version override will only be applied if the specified version is in the current deployment. The versions in the current deployment can be found using the [`wrangler deployments list`](/workers/wrangler/commands/#list#TODO) command or on the [Workers Dashboard](https://dash.cloudflare.com/?to=/:account/workers) under Worker > Deployments > Active Deployment.
 
 :::note[Verifying that the version override was applied]
 
@@ -193,7 +190,7 @@ In this example, your deployment is initially configured to route all traffic to
 | :----------------------------------: | :--------: |
 | db7cd8d3-4425-4fe7-8c81-01bf963b6067 |    100%    |
 
-Create a new deployment using [`wrangler versions deploy --experimental-versions`](/workers/wrangler/commands/#deploy-2) and specify 0% for the new version whilst keeping the previous version at 100%.
+Create a new deployment using [`wrangler versions deploy`](/workers/wrangler/commands/#deploy-2) and specify 0% for the new version whilst keeping the previous version at 100%.
 
 |              Version ID              | Percentage |
 | :----------------------------------: | :--------: |
