--- a/src/content/docs/workers/wrangler/commands.mdx
+++ b/src/content/docs/workers/wrangler/commands.mdx
@@ -2151,12 +2151,8 @@ wrangler whoami
 
 [Versions](/workers/configuration/versions-and-deployments/#versions) are currently in beta. Report bugs in [GitHub](https://github.com/cloudflare/workers-sdk/issues/new/choose).
 
-:::caution
-
-The `--experimental-versions` flag is required to use the `wrangler versions` commands. You may use the shorthand `--x-versions` flag in place of `--experimental-versions` anywhere it is mentioned. For consistency in Wrangler's output, it is recommended that you use the `--experimental-versions` flag for all commands where it is an option.
-
-The minimum required wrangler version to use these commands is 3.40.0.
-
+:::note
+The minimum required wrangler version to use these commands is 3.40.0. For versions before XX (TODO), you will need to add the `--x-versions` flag.
 :::
 
 ### `upload`
@@ -2164,11 +2160,9 @@ The minimum required wrangler version to use these commands is 3.40.0.
 Upload a new [version](/workers/configuration/versions-and-deployments/#versions) of your Worker that is not deployed immediately.
 
 ```txt
-wrangler versions upload [OPTIONS] --experimental-versions
+wrangler versions upload [OPTIONS]
 ```
 
-- `--experimental-versions` string required
-  - Required for `wrangler versions` commands. Can be replaced with `--x-versions`.
 - `--tag` string optional
   - Add a version tag. Accepts empty string.
 - `--message` string optional
@@ -2181,20 +2175,18 @@ wrangler versions upload [OPTIONS] --experimental-versions
 Deploy a previously created [version](/workers/configuration/versions-and-deployments/#versions) of your Worker all at once or create a [gradual deployment](/workers/configuration/versions-and-deployments/gradual-deployments/) to incrementally shift traffic to a new version by following an interactive prompt.
 
 ```txt
-wrangler versions deploy [OPTIONS] --experimental-versions
+wrangler versions deploy [OPTIONS]
 ```
 
-- `--experimental-versions` string required
-  - Required for `wrangler versions` commands. Can be replaced with `--x-versions`.
 - `--name` string optional
   - Perform on a specific Worker rather than inheriting from `wrangler.toml`.
 
 :::note
 
-The non-interactive version of this prompt is: `wrangler versions deploy version-id-1@percentage-1% version-id-2@percentage-2 -y --experimental-versions`
+The non-interactive version of this prompt is: `wrangler versions deploy version-id-1@percentage-1% version-id-2@percentage-2 -y`
 
 For example:
-`wrangler versions deploy 095f00a7-23a7-43b7-a227-e4c97cab5f22@10%   1a88955c-2fbd-4a72-9d9b-3ba1e59842f2@90% -y --experimental-versions`
+`wrangler versions deploy 095f00a7-23a7-43b7-a227-e4c97cab5f22@10%   1a88955c-2fbd-4a72-9d9b-3ba1e59842f2@90% -y`
 
 :::
 
@@ -2203,11 +2195,9 @@ For example:
 Retrieve details for the 10 most recent versions. Details include `Version ID`, `Created on`, `Author`, `Source`, and optionally, `Tag` or `Message`.
 
 ```txt
-wrangler versions list [OPTIONS] --experimental-versions
+wrangler versions list [OPTIONS]
 ```
 
-- `--experimental-versions` string required
-  - Required for `wrangler versions` commands. Can be replaced with `--x-versions`.
 - `--name` string optional
   - Perform on a specific Worker rather than inheriting from `wrangler.toml`.
 
@@ -2216,11 +2206,9 @@ wrangler versions list [OPTIONS] --experimental-versions
 Create or replace a secret for a Worker. Creates a new [version](/workers/configuration/versions-and-deployments/#versions) with modified secrets without [deploying](/workers/configuration/versions-and-deployments/#deployments) the Worker.
 
 ```txt
-wrangler versions secret put <KEY> [OPTIONS] --experimental-versions
+wrangler versions secret put <KEY> [OPTIONS]
 ```
 
-- `--experimental-versions` string required
-  - Required for `wrangler versions` commands. Can be replaced with `--x-versions`.
 - `KEY` string required
   - The variable name for this secret to be accessed in the Worker.
 - `--name` string optional
@@ -2233,11 +2221,9 @@ wrangler versions secret put <KEY> [OPTIONS] --experimental-versions
 Delete a secret for a Worker. Creates a new [version](/workers/configuration/versions-and-deployments/#versions) with modified secrets without [deploying](/workers/configuration/versions-and-deployments/#deployments) the Worker.
 
 ```txt
-wrangler versions delete <KEY> [OPTIONS] --experimental-versions
+wrangler versions delete <KEY> [OPTIONS]
 ```
 
-- `--experimental-versions` string required
-  - Required for `wrangler versions` commands. Can be replaced with `--x-versions`.
 - `KEY` string required
   - The variable name for this secret to be accessed in the Worker.
 - `--name` string optional
@@ -2250,11 +2236,9 @@ wrangler versions delete <KEY> [OPTIONS] --experimental-versions
 Upload multiple secrets for a Worker at once. Creates a new [version](/workers/configuration/versions-and-deployments/#versions) with modified secrets without [deploying](/workers/configuration/versions-and-deployments/#deployments) the Worker.
 
 ```txt
-wrangler versions secret bulk <FILENAME> [OPTIONS] --experimental-versions
+wrangler versions secret bulk <FILENAME> [OPTIONS]
 ```
 
-- `--experimental-versions` string required
-  - Required for `wrangler versions` commands. Can be replaced with `--x-versions`.
 - `FILENAME` string optional
   - The JSON file containing key-value pairs to upload as secrets, in the form `{"SECRET_NAME": "secret value", ...}`.
   - If omitted, Wrangler expects to receive input from `stdin` rather than a file.- `--name` string optional
@@ -2268,12 +2252,8 @@ wrangler versions secret bulk <FILENAME> [OPTIONS] --experimental-versions
 
 This command is currently in closed beta. Report bugs in [GitHub](https://github.com/cloudflare/workers-sdk/issues/new/choose).
 
-:::caution
-
-The `--experimental-versions` flag is required to use the `wrangler triggers` commands. You may use the shorthand `--x-versions` flag in place of `--experimental-versions` anywhere it is mentioned. For consistency in Wrangler's output, it is recommended that you use the `--experimental-versions` flag for all commands where it is an option.
-
-The minimum required wrangler version to use these commands is 3.40.0.
-
+:::note
+The minimum required wrangler version to use these commands is 3.40.0. For versions before XX (TODO), you will need to add the `--x-versions` flag.
 :::
 
 ### `deploy`
@@ -2281,11 +2261,9 @@ The minimum required wrangler version to use these commands is 3.40.0.
 Apply changes to triggers ([Routes or domains](/workers/configuration/routing/) and [Cron Triggers](/workers/configuration/cron-triggers/)) when using [`wrangler versions upload`](/workers/wrangler/commands/#upload).
 
 ```txt
-wrangler triggers deploy [OPTIONS] --experimental-versions
+wrangler triggers deploy [OPTIONS]
 ```
 
-- `--experimental-versions` string required
-  - Required for `wrangler versions` commands. Can be replaced with `--x-versions`.
 - `--name` string optional
   - Perform on a specific Worker rather than inheriting from `wrangler.toml`.
 
@@ -2332,23 +2310,16 @@ wrangler deployments list [OPTIONS]
 :::
 
 :::note
-
-The `--experimental-versions` flag is required to use the new commands below. You may use the shorthand `--x-versions` flag in place of `--experimental-versions` anywhere it is mentioned. For consistency in Wrangler's output, it is recommended that you use the `--experimental-versions` flag for all commands where it is an option.
-
-The minimum required wrangler version to use these commands is 3.40.0.
+The minimum required wrangler version to use these commands is 3.40.0. For versions before XX (TODO), you will need to add the `--x-versions` flag.
 :::
 
-### `list --experimental-versions`
+### `list`
 
 Retrieve details for the 10 most recent [deployments](/workers/configuration/versions-and-deployments/#deployments). Details include `Created on`, `Author`, `Source`, an optional `Message`, and metadata about the `Version(s)` in the deployment.
 
 ```txt
-wrangler deployments list [OPTIONS] --experimental-versions
+wrangler deployments list [OPTIONS]
 ```
-
-- `--experimental-versions` string required
-
-  - Required for version commands. Can be replaced with `--x-versions`.
 
 - `--name` string optional
   - Perform on a specific Worker rather than inheriting from `wrangler.toml`.
@@ -2358,23 +2329,13 @@ wrangler deployments list [OPTIONS] --experimental-versions
 Retrieve details for the most recent deployment. Details include `Created on`, `Author`, `Source`, an optional `Message`, and metadata about the `Version(s)` in the deployment.
 
 ```txt
-wrangler deployments status --experimental-versions
+wrangler deployments status
 ```
-
-- `--experimental-versions` string required
-
-  - Required for version commands. Can be replaced with `--x-versions`.
 
 - `--name` string optional
   - Perform on a specific Worker rather than inheriting from `wrangler.toml`.
 
 ## `rollback`
-
-:::note
-
-[Rollbacks](/workers/configuration/versions-and-deployments/rollbacks/) is currently in open beta. Report bugs in [GitHub](https://github.com/cloudflare/workers-sdk/issues/new/choose).
-
-:::
 
 [Roll back](/workers/configuration/versions-and-deployments/rollbacks/) to a specified [version](/workers/configuration/versions-and-deployments/#versions) by ID, or to the previous version if no ID is provided. The `rollback` command will prompt you for confirmation of the rollback. On confirmation, you will be prompted to provide an optional rollback message.
 
@@ -2398,14 +2359,12 @@ wrangler rollback [<DEPLOYMENT_ID>] [OPTIONS]
 - `--message` string optional
   - Add message for rollback. Accepts empty string. When specified, interactive prompts for rollback confirmation and message are skipped.
 
-### `rollback --experimental-versions`
+### `rollback`
 
 ```txt
-wrangler rollback [<VERSION_ID>] [OPTIONS] --experimental-versions
+wrangler rollback [<VERSION_ID>] [OPTIONS]
 ```
 
-- `--experimental-versions` string required
-  - Required for version commands. Can be replaced with `--x-versions`.
 - `VERSION_ID` string optional
   - The ID of the version you wish to roll back to. If not supplied, the `rollback` command defaults to the version uploaded before the latest version.
 - `--name` string optional
