--- a/src/content/docs/workers/wrangler/commands.mdx
+++ b/src/content/docs/workers/wrangler/commands.mdx
@@ -2936,7 +2936,7 @@ wrangler workflows list
 
 ### `view` | `describe`
 
-Get an existing Hyperdrive configuration.
+Show the current state of a Workflow.
 
 ```txt
 wrangler workflows view <NAME>
@@ -2982,6 +2982,51 @@ Inspect and interact with specific instances of a Workflow.
 ```txt
 wrangler workflows instances
 ```
+
+### `instances list`
+
+List all instances of a Workflow (running, failed, and completed).
+
+```txt
+wrangler workflows instances list <name>
+```
+
+* `NAME` - `string` (required)
+  * The name of the Workflow to list instances for.
+* `--reverse` - `boolean` (optional)
+  * List instances from oldest to newest (newest at the bottom of the output).
+
+### `instances describe`
+
+Describe a specific Workflow instance. This is useful for debugging a specific run and inspecting its state.
+
+```txt
+wrangler workflows instances list <name> <id>
+```
+
+* `name` - `string` (required)
+  * The name of the Workflow.
+* `id` - `string` (required)
+  * The specific instance ID to describe.
+
+You can describe the most recent instance of a Workflow by using `latest` as a positional. This avoids you needing to get the ID to inspect the latest run of a Workflow.
+
+```sh
+wrangler workflows instances describe my-workflow latest
+```
+
+### `instances terminate`
+
+Terminate a running Workflow instance.
+
+```txt
+wrangler workflows instances terminate <name> <id>
+```
+
+* `name` - `string` (required)
+  * The name of the Workflow.
+* `id` - `string` (required)
+  * The specific instance ID to terminate.
 
 
 ***
