--- a/src/content/docs/workflows/get-started.mdx
+++ b/src/content/docs/workflows/get-started.mdx
@@ -19,6 +19,8 @@ To learn more about Workflows, read [the beta announcement blog](https://blog.cl
 
 Workflows allow you to build durable, multi-step applications using the Workers platform. A Workflow can automatically retry, persist state, run for hours or days, and coordinate between third-party APIs.
 
+You can build Workflows to post-process file uploads to [R2 object storage](/r2/), automate generation of [Workers AI](/workers-ai/) embeddings into a [Vectorize](/vectorize/) vector database, or to trigger [user lifecycle emails](TODO) using your favorite email API.
+
 This guide will instruct you through:
 
 * Defining your first Workflow and publishing it
